--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,10 @@
   <head>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io.connect('http://localhost:3000');
+      var socket = io.connect('/');
       socket.on('message', function (data) {
         document.getElementById('bro').innerHTML = data;
-        //console.log(data);
+        console.log(data);
         // socket.emit('my other event', { my: 'data' });
       });
     </script>
